# penr-oz-ai-rag-service

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: document.rs  error.rs  lib.rs  main.rs  pipeline.rs  retrieval.rs
src/chunker/: fixed_size.rs  mod.rs
src/embedding/: mock.rs  mod.rs
src/loader/: mod.rs  text.rs
src/storage/: jsonl.rs  memory.rs  mod.rs
src/vector/: memory.rs  mod.rs
tests/: embedding.rs  ingestion.rs  retrieval.rs  vector_search.rs
