[package]
name = "penr-oz-ai-rag-service"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Modular document ingestion pipeline for a Retrieval-Augmented Generation (RAG) service"
license = "MIT"
repository = "https://github.com/derinworks/penr-oz-ai-rag-service"
readme = "README.md"
keywords = ["rag", "ingestion", "chunking", "nlp", "embeddings"]
categories = ["text-processing"]

[lib]
name = "penr_oz_ai_rag_service"
path = "src/lib.rs"

[[bin]]
name = "penr-oz-rag"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
